# poreplace

./: .gitignore  AUTHORS  INSTALL  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am
data/errata/: Makefile.am  errata.txt  firewall-errata.txt  kana-kanji-errata.txt  typo-errata.txt
poreplace/: Makefile.am  errata.py  main.py  pounit.py
tests/: Makefile.am  test_pounit.py
